# safari_writer

./: .env.example  .geminiignore  .gitignore  AGENTS.md  AUTHORS.md  BUGS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  IDEAS.md  Makefile  README.md  SHAREWARE.md  TODO.md  TODO_files.md  cats.txt  code_review.md  document.py  foobar.txt  mkdocs.yml  pyproject.toml  tox.ini
.claude/: settings.local.json
.github/workflows/: build.yml  create_draft_release.yml  cross-platform.yml  docs.yml  pages.yml  publish.yml  release.yml  tox.yml  zizmor.yml
.github_on_pause/: docs.yml
docs/: CHANGELOG.md  CONTRIBUTING.md  README.md  go_live_tasks.md  index.md  installation.md  safari_suite_tools.slides.md
docs/modules/: safari_asm.md  safari_base.md  safari_basic.md  safari_chat.md  safari_dos.md  safari_fed.md  safari_reader.md  safari_repl.md  safari_slides.md  safari_view.md  safari_writer.md
docs/overview/: README.md  who_is_this_for.htmloooo.dd  who_is_this_for.md
docs/reference/: cli.md  file_types.md  prg_language.md  troubleshooting.md
docs/usage/: blog_publishing.md  commands.md  config.md  macros.md  mastodon.md  usage.md  workflows.md
macros/: datestamp.bas  doc_stats.bas  post_header.bas  thread_export.bas
safari_asm/: __init__.py  __main__.py  interpreter.py  main.py  model.py  parser.py
safari_asm/example/: 00_hello_world.asm  01_prompt_name.asm  02_echo_stdin.asm  03_count_stdin_lines.asm  04_numeric_loop.asm  05_subroutine_greeting.asm  06_stack_roundtrip.asm  07_csv_split.asm  08_collections.asm  09_indexed_access.asm  10_cli_args.asm  11_env_lookup.asm  12_file_copy.asm  13_python_bridge.asm  14_error_branch.asm  15_friendly_style.asm  16_text_pipeline.asm
safari_base/: __init__.py  app.py  bridge.py  database.py  main.py  program_editor.py  screen.py
safari_base/examples/: customers.dbf  demo_calc.prg  demo_create.prg  demo_func.prg  demo_hash.prg
safari_base/lang/: __init__.py  __main__.py  dbf_adapter.py  environment.py  errors.py  functions.py  interpreter.py  lexer.py  parser.py  types.py
safari_basic/: ATARI_BASIC.md  IDEAS.md  REPL_EXPANSION.md  REPL_SUPPORT_TODO.md  SAFARI_BASIC.md  __init__.py  atari_basic.py  context.py  interpreter.py  repl.py  runner.py  test_atari_basic.py  test_exhaustive_functions.py
safari_basic/examples/: art.bas  fibonacci.bas  guess.bas  hello.bas  primes.bas
safari_chat/: __init__.py  __main__.py  app.py  default_help.md  engine.py  extra_help.md  help_schema.md  main.py  safety.py  screens.py  state.py  synonyms.py
safari_dos/: __init__.py  __main__.py  app.py  main.py  screens.py  services.py  state.py
safari_fed/: __init__.py  app.py  client.py  config.py  feed_state.py  main.py  opml.py  screens.py  services.py  state.py
safari_reader/: __init__.py  __main__.py  app.py  main.py  screens.py  services.py  state.py
safari_repl/: __init__.py  __main__.py  app.py  main.py  screens.py  state.py
safari_slides/: __init__.py  __main__.py  app.py  main.py  model.py  parser.py  screens.py  services.py  state.py
safari_view/: README.md  main.py  state.py
safari_view/render/: __init__.py  effects.py  mode_2600.py  mode_800.py  mode_st.py  palettes.py  pipeline.py
safari_view/tests/: test_render.py  test_textual_app.py
safari_view/ui_terminal/: textual_app.py  widgets.py
safari_view/ui_tk/: tk_app.py
safari_writer/: __init__.py  ansi_preview.py  app.py  autosave.py  cli_types.py  cli_version.py  demo_document.sfw  demo_mailmerge.json  document_io.py  export_html.py  export_md.py  export_pdf.py  export_ps.py  file_types.py  format_codec.py  heading_numbering.py  locale_info.py  mail_merge_db.py  main.py  path_utils.py  program_runner.py  proofing.py  splash.py  state.py  syntax_highlight.py  themes.py  typed.py  windows_api.py
safari_writer/macros/: clipboard_paste.bas  datestamp.bas  divider.bas  doc_stats.bas  letter_header.bas  lorem.bas  meeting_header.bas  post_header.bas  signature.bas  todo_item.bas  word_count.bas
safari_writer/screens/: backup_screen.py  doctor.py  editor.py  file_ops.py  git_screen.py  global_format.py  index_screen.py  macro_picker.py  mail_merge.py  main_menu.py  output_screen.py  print_screen.py  (+2 more)
scripts/: compile_mo.py  test_lang_basic.py  test_lang_functions.py  test_lang_hashmap.py  test_lang_program.py  test_program_editor.py
slides/: deck.css  index.html
spec/: 01_safari_writer.md  01_safari_writer_v2.md  02_keyboard.md  03_global_format.md  03_global_format_v2.md  04_inline_format.md  05_proofreader.md  06_mail_merge.md  07_file_format_and_print.md  07_file_format_and_print_TODO.md  08_cli_interface.md  08_cli_interface_v2.md  09_demo_mode.md  09_safari_dos.md  09_safari_dos_TODO.md  09_safari_dos_v2.md  10_file_type_awareness.md  11_ai_chat.md  12_b_safari_base_screens.md  12_safari_base.md  13_safari_dos_preview_and_archives.md  13_safari_dos_preview_and_archives_TODO.md  14_safari_fed.md  15_safari_basic.md  16_internationalization.md  16_internationalization_TODO.md  17_reader.md  18_safari_base_language.md  19_basic_gets_functions.md  20_safari_asm.md  50_safari_view.md  60_slides.md  61_slides_more.md  90_rss_reader.md  BUGS.md  LEARNINGS_01.md  Learnings01.md  Learnings02.md  Learnings03.md  PRIOR_ART.md  (+8 more)
test_integration/: README_fed_mock.md  conftest.py  test_cli_integration.py  test_fed_against_mock.py  test_reader_services.py
tests/: test_chat_app.py  test_cli.py  test_cli_versions.py  test_demo_mode.py  test_editor.py  test_export_md.py  test_export_ps.py  test_format_codec.py  test_global_format.py  test_hypothesis_non_ui.py  test_i18n_integration.py  test_index_screen.py  test_inline_format.py  test_locale_info.py  test_mail_merge.py  test_mail_merge_core.py  test_mail_merge_e2e.py  test_main_menu.py  test_markdown_integration.py  test_packaging_metadata.py  test_print_preview.py  test_proofreader.py  test_safari_base.py  test_safari_dos.py  test_safari_fed.py  test_search_replace.py  test_selection.py  test_splash.py  test_themes.py
tmp_manual_feed_check/: feeds.opml
web/: index.html  package.json  tsconfig.json  vite.config.ts
(+111 files in other folders)
